<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    android:paddingBottom="10dp"
    tools:context="com.example.iem.oldtam.view.activity.AdminAddMusicActivity">

    <TextView
        android:id="@+id/add_info_lib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_info"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/add_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/add_title"
        app:layout_constraintTop_toBottomOf="@id/add_info_lib"/>

    <EditText
        android:id="@+id/add_artist_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/add_artist"
        app:layout_constraintTop_toBottomOf="@id/add_title_edit"/>

    <EditText
        android:id="@+id/add_album_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/add_album"
        app:layout_constraintTop_toBottomOf="@id/add_artist_edit"/>

    <TextView
        android:id="@+id/add_lyrics_lib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_lyrics_subtitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_album_edit"/>

    <EditText
        android:id="@+id/add_partitions_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/add_partitions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_partitions_import"
        app:layout_constraintTop_toBottomOf="@id/add_lyrics_lib"/>

    <Button
        android:id="@+id/add_partitions_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_partition_import"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorSecondary"
        app:layout_constraintTop_toTopOf="@id/add_partitions_edit"
        app:layout_constraintBottom_toBottomOf="@id/add_partitions_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_lyrics_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:hint="@string/add_lyrics"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/add_partitions_edit"
        app:layout_constraintBottom_toTopOf="@+id/add_validate_button"/>

    <Button
        android:id="@+id/add_validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/add_validate_button"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorSecondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
