<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iem.oldtam.view.fragment.UserInProgressFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_title_default"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/detail_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_artist_default"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_title"/>

        <ImageView
            android:id="@+id/detail_partitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/detail_partitions"
            android:background="@color/colorSecondary"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_artist"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
