<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="52dp"
    android:background="@color/white"
    tools:context="com.example.iem.oldtam.view.fragment.InProgressFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/progress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_title_default"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/progress_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_artist_default"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_title"/>

        <TextView
            android:id="@+id/progress_lyrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_lyrics_default"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_artist" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>